Multiple item search added feat: multiple item search added fix: Sequence is now distinguished based on isFixed method test: tests added to multiple item search