@@ -3,13 +3,13 @@ package search;
 import org.junit.jupiter.api.Test;
 import seq.Boundary;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class SearchTest {
     private final Boundary boundary = new Boundary("0", "999");
@@ -19,28 +19,38 @@ class SearchTest {
     void addLastToList() {
         final List<String> seqs = Stream.iterate(0, n -> n + 1)
                 .limit(10)
-                .map(i -> String.valueOf(i))
+                .map(String::valueOf)
                 .collect(Collectors.toList());
-        assertEquals("10", search.free(seqs));
+        assertEquals("10", search.nextOne(seqs));
     }
     @Test
-    void oneBeforeLastIsMisisng() {
+    void fiveIsMissing() {
+        final List<String> seqs = Stream.iterate(0, n -> n + 1)
+                .limit(10)
+                .filter(n -> n != 5)
+                .map(String::valueOf)
+                .collect(Collectors.toList());
+        assertEquals("5", search.nextOne(seqs));
+    }
+
+    @Test
+    void oneBeforeLastIsMissing() {
         final List<String> seqs = Stream.iterate(0, n -> n + 1)
                 .filter(i -> i != 998)
                 .limit(999)
-                .map(i -> String.valueOf(i))
+                .map(String::valueOf)
                 .collect(Collectors.toList());
-        assertEquals("998", search.free(seqs));
+        assertEquals("998", search.nextOne(seqs));
     }
     @Test
     void firstSequenceIsMissing() {
-        final List<String> seqs = Arrays.asList("7");
-        assertEquals("0", search.free(seqs));
+        final List<String> seqs = List.of("7");
+        assertEquals("0", search.nextOne(seqs));
     }
     @Test
     void firstSequenceIsMissingWithEmptyList() {
-        final List<String> seqs = Arrays.asList();
-        assertEquals("0", search.free(seqs));
+        final List<String> seqs = List.of();
+        assertEquals("0", search.nextOne(seqs));
     }
     @Test
     void addLastToListAlpha() {
@@ -50,6 +60,22 @@ class SearchTest {
                 .limit(10)
                 .mapToObj(c -> String.valueOf((char) c))
                 .collect(Collectors.toList());
-        assertEquals("K", s.free(seqs));
+        assertEquals("K", s.nextOne(seqs));
+    }
+    @Test
+    void addMultiple() {
+        final List<String> seqs = Stream.iterate(0, n -> n + 1)
+                .limit(100)
+                .filter(n -> n % 5 != 0)
+                .map(n -> String.valueOf(n))
+                .collect(Collectors.toList());
+        List<String> expected = List.of("0", "5", "10", "15");
+        List<String> actual = search.nextOnes(seqs, 4);
+        assertEquals(expected, actual);
+    }
+    @Test
+    void sequenceToPosition() {
+        final int position = search.toPosition("5");
+        assertEquals(5, position);
     }
 }
